--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TamizhTravels</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <title>TamizhTravels - Reliable Travel Across Tamil Nadu</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Book reliable rides across Tamil Nadu with TamizhTravels. Bike, Auto, Taxi, and Outstation services available." />
+    <base href="/" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚗</text></svg>" />
+  </head>
+  <body>
+    <app-root>
+      <div class="min-h-screen bg-gray-50 flex items-center justify-center">
+        <div class="text-center">
+          <div class="text-6xl mb-4">🚗</div>
+          <div class="text-xl font-semibold text-gray-700">Loading TamizhTravels...</div>
+          <div class="mt-4 inline-block animate-pulse">
+            <div class="w-8 h-8 bg-primary-500 rounded-full"></div>
+          </div>
+        </div>
+      </div>
+    </app-root>
+  </body>
 </html>
